--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,7 +32,7 @@
   include_tasks: ./tasks/config/firewalld_rules.yml
   when: ("firewalld") in ansible_facts.packages
 
-- name: "ensure firewalld is {{ firewalld['service']['state'] }}"
+- name: "Ensure firewalld is {{ firewalld.service.state }}"
   ansible.builtin.service:
     name: firewalld
     state: "{{ firewalld['service']['state'] }}"
